<resources>
<!-- Main -->
    <string name="mainButtonKonvertera">Konvertera</string>
    <string name="mainButtonInfo">Information</string>

<!-- Konvertera -->
    <string name="convVal">Konvertera</string>
    <string name="convInfo">Välj vad du vill konvertera:</string>
    <string name="convInputHint">Ange ett tal:</string>
    <string name="convButtonEffekt">Effekt</string>
    <string name="convButtonTryck">Tryck</string>
    <string name="convButtonHastighet">Hastighet</string>
    <string name="convButtonMått">Mått</string>
    <string name="convButtonFlöde">Flöde</string>

    <string name="convCoreFrån">Från:</string>
    <string name="convCoreTill">Till:</string>
    <string name="convCoreRun">Omvandla</string>
    <string name="convCoreButtonDirektion">Växla till och från</string>

    <string name="convCoreErr1">Ange ett tal att konvertera!</string>
    <string name="convCoreErr2">Välj enhet att konvertera från!</string>
    <string name="convCoreErr3">Välj enhet att konvertera till!</string>
    <string name="convCoreErr4">Går inte att konvertera till samma enhet!</string>

    <!-- Effekt -->
    <string-array name="convPowerArray">
        <item>Välj en enhet:</item>
        <item>HK</item>
        <item>KW</item>
    </string-array>

    <!-- Tryck-->
    <string-array name="convPreassureArray">
        <item>Välj en enhet:</item>
        <item>Bar</item>
        <item>Psi</item>
        <item>mmHg</item>
    </string-array>

    <!-- Hastighet-->
    <string-array name="convSpeedArray">
        <item>Välj en enhet:</item>
        <item>Km/H</item>
        <item>Mph</item>
        <item>Knop</item>
        <item>m/s</item>
    </string-array>

    <!-- Mått -->
    <string-array name="convMeasureArray">
        <item>Välj en enhet:</item>
        <item>dm</item>
        <item>cm</item>
        <item>mm</item>
        <item>Tum</item>
    </string-array>

    <string-array name="convInchArray">
        <item>Eller välj:</item>
        <item>1/8\"</item>
        <item>3/16\"</item>
        <item>1/4\"</item>
        <item>5/16\"</item>
        <item>3/8\"</item>
        <item>7/16\"</item>
        <item>1/2\"</item>
        <item>9/16\"</item>
        <item>5/8\"</item>
        <item>3/4\"</item>
        <item>7/8\"</item>
        <item>1\"</item>
        <item>1 1/8\"</item>
        <item>1  1/4\"</item>
        <item>1  3/8\"</item>
        <item>1  1/2\"</item>
        <item>1  5/8\"</item>
        <item>1  3/4\"</item>
        <item>1  7/8\"</item>
        <item>2\"</item>
        <item>2 1/4\"</item>
        <item>2 1/2\"</item>
        <item>2 3/4\"</item>
        <item>3\"</item>
    </string-array>


    <!-- Flöde -->
    <string-array name="convFlowArray">
        <item>Välj en enhet:</item>
        <item>cfh</item>
        <item>l/h</item>
        <item>m³/h</item>
    </string-array>


<!-- Info -->
    <string name="infoButtonTorque">Åtdragningsmoment</string>
    <string name="infoButtonKvalite">Skruvkvalité</string>

    <!--Moment -->
    <string name="infoMoment_Info">Moment i Nm &#8212; ISO 898&#8211;1</string>
    <string name="infoMoment_GrovSkruv">Grovgängade skruvar</string>
    <string name="infoMoment_Kvalité">Hållfastighet</string>
    <string name="infoMoment_Gänga">Gänga</string>
    <string name="infoMoment_stigning">Stigning</string>
    <string name="infoMoment_FinSkruv">Fingänga</string>
    <string name="infoMoment_StandardSkruv">Standardgänga</string>

    <!-- Kvalité -->
    <string name="infoKvaliteInfoRad1">Draghållfasthetsklassen står ofta instansad på ovansidan av skruvskallen.</string>
    <string name="infoKvaliteInfoRad2">Siffran före punkten anger 1/100 av brottgränsen.</string>
    <string name="infoKvaliteInfoRad3">Siffran efter punkten 1/10 av förhållandet mellan brottgräns och sträckgräns.</string>
    <string name="infoKvaliteInfoRad4">En hållfasthetsmärkning <b>12.9</b> innebär alltså en brottgräns på 1200 MPa och en sträckgräns på 90% av det, dvs 1080 MPa.</string>
    <string name="infoKvaliteInfoRad5"><b>8.8</b> innebär brottgräns på 800 MPa och sträckgräns på 640 MPa (80%).</string>
    <string name="infoKvaliteInfoRad6">1 MPa = 1 N/mm²</string>
    <string name="infoKvaliteInfoRad7">Megapascal = newton per kvadratmillimeter.</string>
    <string name="convCoreExtraInchInfo">Eller välj:</string>

</resources>
