<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_qualityinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tim_tub.konverteringsapp.infoActivity_qualityInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <ImageView
            android:id="@+id/infoQualityPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/info_skruv"
            android:layout_gravity="center"
            android:rotation="295"
            android:onClick="infoZoomImg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoKvaliteInfoRad1"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoKvaliteInfoRad2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoKvaliteInfoRad3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoKvaliteInfoRad4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoKvaliteInfoRad5"/>
        <TextView
            android:text="@string/infoKvaliteInfoRad6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>
        <TextView
            android:text="@string/infoKvaliteInfoRad7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




</ScrollView>
