<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_converter_effekt"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tim_tub.konverteringsapp.converterActivity_core">

    <!--//TODO: TalkBack - http://stackoverflow.com/questions/9730673/missing-contentdescription-attribute-on-image-in-xml -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!--Rad 0-->
        <TextView
            android:text="@string/convInfo"
            android:id="@+id/convInfoCore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            />

    <!--Rad 1-->
        <TextView
            android:text="1."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/convInfoCore"
            android:layout_alignParentStart="true"
            android:id="@+id/convCore1"
            android:layout_marginTop="20dp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:text="@string/convCoreFrån"
            android:id="@+id/convCoreText2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/convCore1"
            android:layout_alignBaseline="@id/convCore1"
            android:layout_marginStart="4dp"
            />

        <Spinner
            android:id="@+id/convCoreSpinner1"
            android:layout_width="@dimen/convSpinner"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/convCore1"
            android:layout_alignBottom="@+id/convCore1"
            android:layout_alignStart="@+id/convCoreSpinner2"
            />


    <!--Rad 2-->
        <ImageButton
            android:background="@mipmap/arrow"
            android:id="@+id/convCoreButtonDirektion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/convCore1"
            android:layout_alignStart="@id/convCoreText2"
            android:layout_marginTop="12dp"
            android:layout_marginStart="-6dp"
            android:onClick="changeConvDir"

            android:contentDescription="@string/convCoreButtonDirektion"
            />

    <!--Rad 3-->
        <TextView
            android:text="2."
            android:id="@+id/convCore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/convCoreButtonDirektion"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            tools:ignore="HardcodedText"
            />

        <TextView
            android:text="@string/convCoreTill"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/convCore2"
            android:layout_alignBaseline="@id/convCore2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:id="@+id/convCoreText3"
            />

        <Spinner
            android:id="@+id/convCoreSpinner2"
            android:layout_width="@dimen/convSpinner"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/convCore2"
            android:layout_alignBottom="@+id/convCore2"
            android:layout_centerHorizontal="true"

            />

    <!-- Rad 4 -->
        <TextView
            android:text="3."
            android:id="@+id/convCore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/convCore2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            tools:ignore="HardcodedText"
            />

        <EditText
            android:id="@+id/convCoreInput"
            android:hint="1"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:minWidth="130dp"
            android:maxWidth="148dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/convCore3"
            android:layout_alignBottom="@+id/convCore3"
            android:layout_centerHorizontal="true"
            tools:ignore="HardcodedText"
            />

        <TextView
            android:id="@+id/convCoreInputInfo"
            android:text="@string/convInputHint"
            android:layout_toEndOf="@id/convCore3"
            android:layout_alignStart="@id/convCoreText2"
            android:layout_alignBaseline="@id/convCore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

    <!-- Rad 5 -->
        <TextView
            android:id="@+id/convCoreInchInfo"
            android:text="@string/convCoreExtraInchInfo"
            android:layout_below="@id/convCoreInput"
            android:layout_alignStart="@id/convCoreText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"/>

        <!-- TODO:http://www.rapidtables.com/convert/length/inch-to-mm.htm -->
        <Spinner
            android:id="@+id/convCoreSpinner3Inch"
            android:layout_width="@dimen/convSpinner"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/convCoreInchInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:visibility="gone"

            />

    <!-- Rad 6 -->
        <Button
            android:text="@string/convCoreRun"
            android:id="@+id/convCoreRun"
            android:layout_below="@id/convCoreInput"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="runConv"/>

    <!-- Rad 7 -->
        <TextView
            android:id="@+id/convCoreResultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/convCoreRun"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textIsSelectable="false"
            />
    </RelativeLayout>
</ScrollView>